Fixed image stretching.

--- a/Client/Pages/IndexSections/About.razor.css
+++ b/Client/Pages/IndexSections/About.razor.css
@@ -1,5 +1,6 @@
-﻿.profile-pic{
+﻿.profile-pic {
     border-radius: 100% 100% 0rem 0rem;
     width: 100%;
     height: 100%;
+    object-fit: cover;
 }
